exports[`AppLaunchView should render apps sorted by name and isOfficial 1`] = `
<div
  className="list-group">
  <div
    className="core-app-launch-item list-group-item">
    <img
      alt="App icon"
      className="core-app-launch-item-icon"
      src="test-file-stub" />
    <div>
      <h4
        className="list-group-item-heading">
        appA
      </h4>
      <p
        className="list-group-item-text">
        official
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons">
      <button
        className="btn btn-primary core-btn"
        onClick={[Function]}
        title="Launch app">
        <span
          className="glyphicon glyphicon-play" />
        <span
          className="core-btn-text">
          Launch
        </span>
      </button>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item">
    <img
      alt="App icon"
      className="core-app-launch-item-icon"
      src="test-file-stub" />
    <div>
      <h4
        className="list-group-item-heading">
        appA
      </h4>
      <p
        className="list-group-item-text">
        official
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons">
      <button
        className="btn btn-primary core-btn"
        onClick={[Function]}
        title="Launch app">
        <span
          className="glyphicon glyphicon-play" />
        <span
          className="core-btn-text">
          Launch
        </span>
      </button>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item">
    <img
      alt="App icon"
      className="core-app-launch-item-icon"
      src="test-file-stub" />
    <div>
      <h4
        className="list-group-item-heading">
        appA
      </h4>
      <p
        className="list-group-item-text">
        local
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons">
      <button
        className="btn btn-primary core-btn"
        onClick={[Function]}
        title="Launch app">
        <span
          className="glyphicon glyphicon-play" />
        <span
          className="core-btn-text">
          Launch
        </span>
      </button>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item">
    <img
      alt="App icon"
      className="core-app-launch-item-icon"
      src="test-file-stub" />
    <div>
      <h4
        className="list-group-item-heading">
        appB
      </h4>
      <p
        className="list-group-item-text">
        official
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons">
      <button
        className="btn btn-primary core-btn"
        onClick={[Function]}
        title="Launch app">
        <span
          className="glyphicon glyphicon-play" />
        <span
          className="core-btn-text">
          Launch
        </span>
      </button>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item">
    <img
      alt="App icon"
      className="core-app-launch-item-icon"
      src="test-file-stub" />
    <div>
      <h4
        className="list-group-item-heading">
        appB
      </h4>
      <p
        className="list-group-item-text">
        local
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons">
      <button
        className="btn btn-primary core-btn"
        onClick={[Function]}
        title="Launch app">
        <span
          className="glyphicon glyphicon-play" />
        <span
          className="core-btn-text">
          Launch
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`AppLaunchView should render with two local apps 1`] = `
<div
  className="list-group">
  <div
    className="core-app-launch-item list-group-item">
    <img
      alt="App icon"
      className="core-app-launch-item-icon"
      src="test-file-stub" />
    <div>
      <h4
        className="list-group-item-heading">
        pc-nrfconnect-bar
      </h4>
      <p
        className="list-group-item-text">
        local
        , v
        4.5.6
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons">
      <button
        className="btn btn-primary core-btn"
        onClick={[Function]}
        title="Launch app">
        <span
          className="glyphicon glyphicon-play" />
        <span
          className="core-btn-text">
          Launch
        </span>
      </button>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item">
    <img
      alt="App icon"
      className="core-app-launch-item-icon"
      src="test-file-stub" />
    <div>
      <h4
        className="list-group-item-heading">
        pc-nrfconnect-foo
      </h4>
      <p
        className="list-group-item-text">
        official
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons">
      <button
        className="btn btn-primary core-btn"
        onClick={[Function]}
        title="Launch app">
        <span
          className="glyphicon glyphicon-play" />
        <span
          className="core-btn-text">
          Launch
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`AppLaunchView should render without any apps 1`] = `
<div
  className="list-group">
  <div>
    <h4>
      Welcome to nRF Connect
    </h4>
    <p>
      To get started, go to 
      <i>
        Add/remove apps
      </i>
       to install some apps.
    </p>
  </div>
</div>
`;
